# mhlog

./: .gitpod.yml  Cargo.toml  README.md  TODO.md
examples/: bail.rs  basic.rs  custom_prefixes.rs  debug.rs  dynamic_prefixes.rs  hello_log.rs  verbose.rs
src/: lib.rs
tests/: hello.rs  mhlog.rs
