[package]
name = "mhlog"
version = "2.0.0"
authors = ["m <mhmorgan42@gmail.com>"]
edition = "2018"
description = "mhlog is a simple, thread-safe logging library."
readme = "README.md"
keywords = ["log", "logging", "simple"]
categories = ["development-tools::debugging"]
license = "BSD-3-Clause"
repository = "https://github.com/MHmorgan/rustmhlog"
documentation = "https://docs.rs/mhlog/"

[badges]
travis-ci = { repository = "MHmorgan/mhlog", branch = "master" }

[dependencies]
lazy_static = "~1.4.0"
chrono = "~0.4.11"
