[package]
name = "mhlog"
version = "2.0.0"
authors = ["m <mhmorgan42@gmail.com>"]
edition = "2018"
description = "mhlog is a simple, thread-safe logging library."
readme = "README.md"
keywords = ["log", "logging", "simple"]
categories = ["development-tools::debugging"]
license = "BSD-3-Clause"
repository = "https://github.com/MHmorgan/rustmhlog"
documentation = "https://docs.rs/mhlog/"

[badges]
travis-ci = { repository = "MHmorgan/mhlog", branch = "master" }

[features]
# If enabled logging statements will be coloured.
colours = ["console"]

# If enabled info!() and log!() will print to stdout. By default all logging
# is printed to stderr.
log2stdout = []

[dependencies]
chrono = "0.4.11"
console = { version = "0.11.2", optional = true }
