[package]
name = "mhlog"
version = "3.0.1"
authors = ["m <magnus.hirth@gmail.com>"]
edition = "2018"
description = "MHlog is a simple, thread-safe logging library."
readme = "README.md"
keywords = ["log", "logging", "simple"]
categories = ["development-tools::debugging"]
license = "BSD-3-Clause"
repository = "https://github.com/MHmorgan/mhlog"
documentation = "https://docs.rs/mhlog/"

[badges]
travis-ci = { repository = "MHmorgan/mhlog", branch = "master" }
maintenance = { status = "actively-developed" }

[features]
only_stdout = [] # Only write to stdout
only_stderr = [] # Only write to stderr

# Enable colouring of log messages when writing to a terminal.
colours = ["console"]

[dependencies]
console = { version = "0.11.2", optional = true }
lazy_static = "~1.4"

[dev-dependencies]
chrono = "~0.4"
